--- a/forcss.html
+++ b/forcss.html
@@ -6,8 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="dash.css">
 </head>
-<body>
-    <body style="background-color: black;"
+<body style="background-color: black;">
     <form action="https://youtube.com/shorts/TLqgpTjVc5Q?si=aKGZenQju6Gii_R3">
     <h1>𝔣𝔯𝔲𝔥</h1>
     <button>submit</button>
