--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="background-color: black;">
     <form action="https://youtube.com/shorts/TLqgpTjVc5Q?si=aKGZenQju6Gii_R3">
-    <h1>𝔣𝔯𝔲𝔥</h1>
+    <h1>fruh</h1>
     <button>submit</button>
 </form>
     
