--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="dash.css">
+    <link rel="stylesheet" href="index.css">
 </head>
-<body style="background-color: black;">
+<body>
     <form action="https://youtube.com/shorts/TLqgpTjVc5Q?si=aKGZenQju6Gii_R3">
-    <h1>fruh</h1>
+    <h1>𝔣𝔯𝔲𝔥</h1>
     <button>submit</button>
 </form>
     
