--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body style="background-color: black;">
-    <form action="https://youtube.com/shorts/TLqgpTjVc5Q?si=aKGZenQju6Gii_R3">
+    <form action="https://youtube.com/shorts/H9FuefUp2rI?si=yF-UpQ81VnfihIZu>
     <h1>𝔣𝔯𝔲𝔥</h1>
     <button>submit</button>
 </form>
