--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body style="background-color: black;">
     <form action="https://youtube.com/shorts/H9FuefUp2rI?si=VN6dQzOVlGALo1Gy">
     <h1>𝔣𝔯𝔲𝔥</h1>
-    <button>submit</button>
+    <button>𝘤𝘭𝘪𝘤𝘬 𝘰𝘳 𝘨𝘢𝘺</button>
 </form>
     
 </body>
