--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="background-color: black;">
     <form action="https://youtube.com/shorts/H9FuefUp2rI?si=VN6dQzOVlGALo1Gy">
-    <h1>𝔣𝔯𝔲𝔥</h1>
+    <h1>𝔣𝔯𝔲𝔥<sub>©</sub></h1>
     <button>𝓬𝓵𝓲𝓬𝓴 𝓱𝓮𝓻𝓮!</button>
 </form>
 <div class="image-container">
