--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Responsive Page</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body style="background-color: black;">
-    <form action="https://youtube.com/shorts/H9FuefUp2rI?si=VN6dQzOVlGALo1Gy">
-    <h1>𝔣𝔯𝔲𝔥<sub>©</sub></h1>
-    <button>𝓬𝓵𝓲𝓬𝓴 𝓱𝓮𝓻𝓮!</button>
-</form>
-<div class="image-container">
-    <img class="img2" src="https://i.pinimg.com/736x/08/4d/c1/084dc11354b868227ad81aa68234b348.jpg" alt="Image 2">
-    <img class="img1" src="https://i.pinimg.com/564x/3d/e4/f3/3de4f3a48b7ee20a46b86e80d9dc30f4.jpg" alt="Image 1">
-    <img class="img3" src="rotated.jpg" alt="Image 3">
-</div>
-
     
+    <form action="https://youtube.com/shorts/H9FuefUp2rI?si=VN6dQzOVlGALo1Gy">
+        <h1>𝔣𝔯𝔲𝔥<sub>©</sub></h1>
+        <button>𝓬𝓵𝓲𝓬𝓴 𝓱𝓮𝓻𝓮!</button>
+    </form>
+
+    <div class="image-container">
+        <img class="img2" src="https://i.pinimg.com/736x/08/4d/c1/084dc11354b868227ad81aa68234b348.jpg" alt="Image 2">
+        <img class="img1" src="https://i.pinimg.com/564x/3d/e4/f3/3de4f3a48b7ee20a46b86e80d9dc30f4.jpg" alt="Image 1">
+        <img class="img3" src="rotated.jpg" alt="Image 3">
+    </div>
+
 </body>
 </html>
